--- a/popup.css
+++ b/popup.css
@@ -3,9 +3,24 @@ html {
     scrollbar-gutter: stable;
 }
 
+::-webkit-scrollbar-track {
+    background: white;
+    box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #2d3841;
+    border-radius: 4px;
+}
+
 .container {
-    width: 350px;
-    margin: 5px;
+    width: 320px;
+    margin: 3px;
     font-size: larger;
 }
 
@@ -15,10 +30,7 @@ h2 {
 
 input {
     margin-top: 20px;
-    margin-bottom: 30px;
-
     width: 100%;
-
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -69,7 +81,7 @@ button {
 }
 
 .channel {
-    margin-bottom: 50px;
+    margin-top: 45px;
 }
 
 .channel-info {
@@ -117,8 +129,8 @@ button {
 }
 
 .video_info_container {
-    margin-left: 10px;
-    font-weight: 500;
+    margin-left: 7px;
+    font-weight: 470;
 }
 
 .duration {
